<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="320dp" >

		<LinearLayout
			    android:id="@+id/header"
			    style="@style/HeaderStyle">
		</LinearLayout>
		
  		<LinearLayout
  		    	android:id="@+id/header_background"
  		    	android:layout_below="@id/header"
  		    	style="@style/HeaderBackgroundStyle">
  		</LinearLayout>

        <!-- HEADER ENDS -->
        
  		<!--FOOTER STARTS-->
  		
   		<LinearLayout
	  		    android:id="@+id/footer"
	  		    style="@style/FooterStyle" >
	  	</LinearLayout>
	  	
   		<LinearLayout
  		    	android:id="@+id/footer_background"
  		    	android:layout_above="@id/footer"
  		    	style="@style/FooterBackgroundStyle" >
  		</LinearLayout>  	

        <!-- FOOTER ENDS -->
        
        <!-- BODY BEGINS -->

        <LinearLayout
            style="@style/LinearLayout"
            android:layout_below="@id/header_background"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <TextView
            	style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding2"
                android:text="@string/new_account"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/Yellow" />

            <!-- USERNAME BEGINS -->
            
            <TextView
            	style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/new_user"
                android:textSize="@dimen/text2" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="16"
                android:singleLine="true" />

            <!-- USERNAME ENDS -->
            
            <!-- PASSWORD BEGINS -->
            
            <TextView
            	style="@style/TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/new_password"
                android:textSize="@dimen/text2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- PASSWORD ENDS -->
            
            <!-- CONFIRM PASSWORD BEGINS -->
            
            <TextView
            	style="@style/TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/confirm_password"
                android:textSize="@dimen/text2" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- CONFIRM PASSWORD ENDS -->
           
            <!-- BUTTONS BEGIN -->
             
            <Button
                style="@style/YellowButtonStyle"
                android:id="@+id/done_button"
                android:text="@string/done"
                android:layout_marginTop="10dp" />

            <Button
                style="@style/YellowButtonStyle"
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_marginTop="10dp" />
            
            <!-- BUTTONS END -->
            
        </LinearLayout>
    </RelativeLayout>

</ScrollView>