<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="320dp"
      android:background="#ffffff" >
  		
  		<!--HEADER STARTS-->
  		
			<LinearLayout
			    android:id="@+id/header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:background="@layout/header_gradient">
			</LinearLayout>
		
  		<!--HEADER ENDS-->  
  		
  		<!--FOOTER STARTS-->
  		
	  		<LinearLayout
	  		    android:id="@+id/footer"
	  		    android:layout_width="fill_parent"
	  		    android:layout_height="100dip"
	  		    android:layout_alignParentBottom="true"
	  		    android:background="@layout/footer_repeat" >
	  			<Button
	  			    android:id="@+id/new_user_button"
	  			    android:layout_width="wrap_content"
	  			    android:layout_height="wrap_content"
	  			    android:gravity="center"
	  			    android:paddingBottom="30dp"
	  			    android:paddingLeft="75dp"
	  			    android:paddingRight="30dp"
	  			    android:paddingTop="30dp"
	  			    android:text="@string/new_register"
	  			    android:textAppearance="?android:attr/textAppearanceMedium"
	  			    android:textColor="#000000"
	  			    android:textSize="20sp"
	  			    android:textStyle="bold" />
	  		</LinearLayout>
	  		
  		<!--FOOTER ENDS-->
  		
  		<!-- BODY BEGINS -->

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/header"
		    android:background="#FFFFFF"
		    android:orientation="vertical"
		    android:padding="10dip" >	  
		    
		    <!--LOGIN BEGINS-->
		    
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"
		            android:text="@string/enter_username"
		            android:textColor="@color/Black"
		            android:textSize="18sp"
		            android:textStyle="bold" />
		        <EditText
					android:id="@+id/username_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:layout_marginBottom="20dip"
					android:singleLine="true"
					android:inputType="text"/>
	        
	        <!--LOGIN ENDS-->
		  
		    <!-- PASSWORD BEGINS -->
		  
				<TextView
					android:text="@string/enter_password"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
				    android:textColor="#000000"
				    android:textSize="18sp"
				    android:textStyle="bold" />				
				<EditText
					android:id="@+id/password_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:singleLine="true"
					android:inputType="textPassword"/>

			<!-- PASSWORD ENDS -->				

			<!-- BUTTONS BEGIN -->
			
				<Button
					android:id="@+id/login_button"
					android:text="@string/login_button"
					android:layout_marginTop="10dip"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<Button
					android:id="@+id/cancel_button"
					android:text="@string/exit_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>	
				
			<!-- BUTTONS END -->
			
		</LinearLayout>
		
  		<!-- BODY ENDS -->
		
  </RelativeLayout>
</ScrollView>

<!--PREVIOUS LAYOUT -->

<!--<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="horizontal"
    android:padding="@dimen/default_padding" >

    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView  
            android:text="@string/login_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/margin_bottom1"
			android:textSize="@dimen/default_title"/>
       	<TextView
			android:text="@string/enter_username"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_gravity="left"
			android:textSize="@dimen/default_text"/>
     	<EditText
			android:id="@+id/username_text"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"/>
		<TextView
			android:text="@string/enter_password"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_gravity="left"
			android:textSize="@dimen/default_text"
			/>
		<EditText
			android:id="@+id/password_text"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"/>

		<Button
			android:id="@+id/login_button"
			android:text="@string/login_button"
			android:layout_marginTop="@dimen/margin_top2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/cancel_button"
			android:text="@string/exit_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/new_user_button"
			android:text="@string/new_user_button"
			android:layout_marginTop="@dimen/margin_top2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
   	</LinearLayout>
</ScrollView>
  -->